--- a/grilla.css
+++ b/grilla.css
@@ -22,7 +22,8 @@ section {
 }
 
 .visor {
-    font-size: 25px;
+    text-align: right;
+    font-size: 50px;
     grid-column-start: 1;
     grid-column-end: 5;
 }
